# labs

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  idea.md
projects/agentic-sql-mini/: .env.example  .gitignore  HANDOFF.md  README.md  TESTING.md  _trace.py  pyproject.toml  training_results.md  writeup_brief_revised.md  writeup_status_update.md  writeup_status_update_v2.md  writeup_tab1_revision.md  writeup_v3.md
projects/agentic-sql-mini/data/: split.json
projects/agentic-sql-mini/data/dabstep/enrichment/: guide_database.md  sql_patterns.md
projects/agentic-sql-mini/data/dabstep/schemas/: v1_comments.sql  v2_analytics.sql  v3_comments.sql  v3_metadata_ddl.sql  v3_seed_annotations.sql  v3_seed_fragments.sql  v3_views.sql  v4_macros.sql
projects/agentic-sql-mini/data/dabstep/tasks/: README.md  all.jsonl  dev.jsonl
projects/agentic-sql-mini/schemas/: baseline.sql  explicit.sql
projects/agentic-sql-mini/src/: agent.py  load.py  run.py  score.py
projects/bird-bench/: .gitignore  CLAUDE.md  PROMPT_IMPROVEMENTS.md  README.md  TODO.md  analyze_failures.py  bird-eval-plan.md  deep_failure_analysis.py  optimization_research.md  progress_log.md  pyproject.toml
projects/bird-bench/data/: platinum_answers.json  platinum_reviewed.json
projects/bird-bench/docs/: eval_design.md  hydration_errors.md  learnings-metadata-extraction.md
projects/bird-bench/eval/: __init__.py  cli.py  config.py  database_setup.py  error_report.py  hydrator.py  platinum_report.py  results.py  runner.py  sampler.py  scoring.py
projects/bird-bench/prompts/: system_prompt.md  system_prompt_backup.md  user_prompt.md  user_prompt.md.j2  user_prompt_backup.md
projects/bird-bench/src/: __init__.py  audit_gold_sql.py  comparison.py  constants.py  controllog.py  create_curated_dataset.py  data_prep.py  error_analysis.py  error_investigator.py  fd_monitor.py  fix_gold_sql.py  introspect.py  load_to_motherduck.py  mcp_client.py  platinum.py  report.py  schema_helper.py  schema_linker.py  sql_executor.py  sql_utils.py  truth_seeker.py  uploads.py
projects/bird-bench/src/optimization/: README.md  __init__.py  optimizer.py  run.py
projects/bird-bench/src/providers/: __init__.py  base.py  openrouter.py
projects/bird-bench/tests/: test_hydrator.py
projects/connections-eval-mini/: .gitignore  README.md  analyze.py  analyze.sql  pyproject.toml
projects/connections-eval-mini/inputs/: models.yml  prompt_template.xml  puzzles.yml
projects/connections-eval-mini/src/connections_eval/: __init__.py  cli.py  core.py
projects/connections-eval-mini/src/controllog/: __init__.py
projects/connections-eval-mini/src/eval_shared/: __init__.py
projects/connections-eval-mini/tests/: test_core_invariants.py
projects/controllog/: README.md  pyproject.toml
projects/controllog-viz/: .gitignore  README.md  pyproject.toml
projects/controllog-viz/src/controllog_viz/: __init__.py  cli.py  eval_review.py  queries.py  reader.py  render.py
projects/controllog-viz/src/controllog_viz/eval_review/: __init__.py  assets.py  model.py  page.py  trace.py
projects/controllog-viz/tests/: conftest.py  test_cli.py  test_dashboard.py  test_eval_review.py  test_queries.py  test_reader.py  test_render.py
projects/controllog-viz/tests/fixtures/controllog/: events.jsonl  postings.jsonl
projects/controllog-viz/tests/fixtures_eval/controllog/: events.jsonl
projects/controllog-viz/tests/fixtures_matrix/controllog/: events.jsonl
projects/controllog/docs/: spec-v1.1.md
projects/controllog/src/controllog/: __init__.py  builders.py  motherduck.py  sdk.py
projects/controllog/tests/: conftest.py  test_builders.py  test_motherduck.py  test_sdk.py
projects/metadata_generator/: .gitignore  CLAUDE.md  README.md  explainer.md  pyproject.toml
projects/metadata_generator/gist/: README.md  metadata_generator.py  pyproject.toml  sample.env
projects/metadata_generator/src/metadata_generator/: __init__.py  annotations.py  cli.py  config.py  connection.py  facts.py  generator.py  history.py  llm_client.py  models.py  persistence.py  profiler.py  progress.py  sql.py  translator.py
projects/metadata_generator/tests/: test_annotations.py  test_config.py  test_facts.py  test_history.py  test_models.py  test_persistence.py  test_profiler.py  test_sql.py  test_translator.py
projects/motherduck-dive-viewer/: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
projects/motherduck-dive-viewer/app/: delete-dive-button.tsx  dive-controls.tsx  globals.css  layout.tsx  page.tsx
projects/motherduck-dive-viewer/lib/: dive-query-capability.test.ts  dive-query-capability.ts  dive-viewer.ts  dives.ts  mcp-client.ts  motherduck-env.ts  motherduck-oauth.test.ts  motherduck-oauth.ts  motherduck-sql.ts  require-auth.ts  sql-guard.test.ts  sql-guard.ts
projects/motherduck-oauth-nextjs/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
projects/motherduck-oauth-nextjs/.vercel/: project.json
projects/motherduck-oauth-nextjs/app/: dive-controls.tsx  page.tsx
projects/motherduck-oauth-nextjs/lib/: api-helpers.ts  dive-embed.ts  dive-query-capability.test.ts  dive-query-capability.ts  dive-viewer.test.ts  dive-viewer.ts  dives.ts  mcp-client.ts  motherduck-oauth.ts  motherduck-sql.ts
projects/nba-box-scores/: README.md
projects/nba-box-scores-pipeline/: PHASE2_HANDOFF.md  README.md  plan.md  pyproject.toml
projects/nba-box-scores-pipeline/flights/nba_backfill/: main.py
projects/nba-box-scores-pipeline/flights/nba_nightly/: main.py
projects/nba-box-scores-pipeline/src/nba_box_scores_pipeline/: __init__.py  config.py  entrypoints.py
projects/nba-box-scores-pipeline/src/nba_box_scores_pipeline/db/: loader.py  schema.py
projects/nba-box-scores-pipeline/tests/: test_config_env.py  test_loader.py
projects/nba-box-scores-pipeline/tests/fixtures/: 0022400061.json  0022400501.json
projects/nba-box-scores/dive/: README.md
projects/react-components/: .gitignore  README.md
(+38 files in other folders)
