[project]
name = "agentic-sql-mini"
version = "0.1.0"
description = "Minimal A/B harness: does naming alone explain the V1 catalog-context win on DABstep?"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "duckdb>=1.4.4,<1.5",
    "openai-agents>=0.12.5",
    "python-dotenv>=1.2.2",
    "rich>=13.0",
    "controllog",
]

[project.scripts]
asm = "src.run:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
controllog = { git = "https://github.com/motherduckdb/labs", subdirectory = "projects/controllog" }

[tool.ruff]
target-version = "py311"
line-length = 100
