[project]
name = "eval-connections-mini"
version = "1.0.0"
description = "Workshop: Evaluate AI models on NYT Connections puzzles"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "duckdb>=1.2.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
eval = "connections_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connections_eval", "src/controllog", "src/eval_shared"]
