[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "controllog-viz"
version = "0.1.0"
description = "Static HTML views for controllog datasets — a per-run review and a cross-run dashboard, read from JSONL or MotherDuck through one DuckDB layer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "MotherDuck Labs" },
]
keywords = ["controllog", "observability", "agents", "evals", "duckdb", "motherduck", "html"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    # Upper bound: MotherDuck does not yet support DuckDB 1.5.3 (latest supported 1.5.2).
    "duckdb>=1.0.0,<=1.5.2",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
controllog-viz = "controllog_viz.cli:cli"

[project.urls]
Homepage = "https://github.com/motherduckdb/labs/tree/main/projects/controllog-viz"

[tool.hatch.build.targets.wheel]
packages = ["src/controllog_viz"]
