[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "controllog"
version = "0.1.0"
description = "Controllable logging for AI/agentic systems — events + balanced postings, JSONL transport, optional MotherDuck upload."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "MotherDuck Labs" },
]
keywords = ["logging", "observability", "agents", "evals", "double-entry", "motherduck", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.optional-dependencies]
duckdb = ["duckdb>=1.0.0"]
dev = ["pytest>=7.0", "duckdb>=1.0.0"]

[project.urls]
Homepage = "https://github.com/motherduckdb/labs/tree/main/projects/controllog"
Spec = "https://github.com/motherduckdb/labs/blob/main/projects/controllog/docs/spec-v1.1.md"

[tool.hatch.build.targets.wheel]
packages = ["src/controllog"]
