[project]
name = "metadata-generator"
version = "0.1.0"
description = "Generate metadata for MotherDuck databases - profiles, descriptions, and SQL comments"
requires-python = ">=3.11"
dependencies = [
    "datasketch>=1.6.0",
    "duckdb>=1.4.4",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "sqlglot>=20.0.0",
    "pytz>=2025.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
metadata-generator = "metadata_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metadata_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
