[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nba-box-scores-pipeline"
version = "0.1.0"
description = "Python ingest pipeline for nba_box_scores_v3, deployed as MotherDuck Flights."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "MotherDuck Labs" },
]
keywords = ["nba", "motherduck", "flights", "ingest"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "duckdb>=1.3.0",
    "httpx>=0.27.0",
    "controllog @ git+https://github.com/motherduckdb/labs#subdirectory=projects/controllog",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pydantic>=2.0",  # used by deploy.py / flight_schema.py once they land
]

[project.urls]
Plan = "https://github.com/motherduckdb/labs/blob/main/projects/nba-box-scores-pipeline/plan.md"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nba_box_scores_pipeline"]
